Ingress manifest.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: App-ingress
  namespace: App
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nxinx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "100M"
spec:
    rules:
    - host: App.com
      http:
        paths:
        - path: /(.*)
          backend:
            serviceName: App-Name
            servicePort: 8025
